bison.output
Grammar

    0 $accept: P $end

    1 P: TRET Main '(' ')' '{' D S '}'

    2 E: E '+' E
    3  | E '*' E
    4  | '(' E ')'
    5  | Nro
    6  | Not E
    7  | E And E
    8  | E Or E
    9  | True
   10  | False
   11  | Id
   12  | Id '=' E

   13 RET: Return E
   14    | Return

   15 TRET: Int
   16     | Bool
   17     | Void

   18 TVAR: Int
   19     | Bool

   20 DEC: TVAR Id

   21 D: D DEC ';'
   22  | ε

   23 S: S E ';'
   24  | S RET ';'
   25  | ε


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 1 4
    ')' (41) 1 4
    '*' (42) 3
    '+' (43) 2
    ';' (59) 21 23 24
    '=' (61) 12
    '{' (123) 1
    '}' (125) 1
    error (256)
    Int (258) 15 18
    Bool (259) 16 19
    Void (260) 17
    Return (261) 13 14
    Main (262) 1
    And (263) 7
    Not (264) 6
    Or (265) 8
    True (266) 9
    False (267) 10
    Id <texto> (268) 11 12 20
    Nro <texto> (269) 5


Nonterminals, with rules where they appear

    $accept (23)
        on left: 0
    P <nodo> (24)
        on left: 1
        on right: 0
    E <nodo> (25)
        on left: 2 3 4 5 6 7 8 9 10 11 12
        on right: 2 3 4 6 7 8 12 13 23
    RET <nodo> (26)
        on left: 13 14
        on right: 24
    TRET <nodo> (27)
        on left: 15 16 17
        on right: 1
    TVAR <nodo> (28)
        on left: 18 19
        on right: 20
    DEC <nodo> (29)
        on left: 20
        on right: 21
    D <nodo> (30)
        on left: 21 22
        on right: 1 21
    S <nodo> (31)
        on left: 23 24 25
        on right: 1 23 24


State 0

    0 $accept: • P $end
    1 P: • TRET Main '(' ')' '{' D S '}'
   15 TRET: • Int
   16     | • Bool
   17     | • Void

    Int   shift, and go to state 1
    Bool  shift, and go to state 2
    Void  shift, and go to state 3

    P     go to state 4
    TRET  go to state 5


State 1

   15 TRET: Int •

    $default  reduce using rule 15 (TRET)


State 2

   16 TRET: Bool •

    $default  reduce using rule 16 (TRET)


State 3

   17 TRET: Void •

    $default  reduce using rule 17 (TRET)


State 4

    0 $accept: P • $end

    $end  shift, and go to state 6


State 5

    1 P: TRET • Main '(' ')' '{' D S '}'

    Main  shift, and go to state 7


State 6

    0 $accept: P $end •

    $default  accept


State 7

    1 P: TRET Main • '(' ')' '{' D S '}'

    '('  shift, and go to state 8


State 8

    1 P: TRET Main '(' • ')' '{' D S '}'

    ')'  shift, and go to state 9


State 9

    1 P: TRET Main '(' ')' • '{' D S '}'

    '{'  shift, and go to state 10


State 10

    1 P: TRET Main '(' ')' '{' • D S '}'
   21 D: • D DEC ';'
   22  | ε •

    $default  reduce using rule 22 (D)

    D  go to state 11


State 11

    1 P: TRET Main '(' ')' '{' D • S '}'
   18 TVAR: • Int
   19     | • Bool
   20 DEC: • TVAR Id
   21 D: D • DEC ';'
   23 S: • S E ';'
   24  | • S RET ';'
   25  | ε •  [Return, Not, True, False, Id, Nro, '(', '}']

    Int   shift, and go to state 12
    Bool  shift, and go to state 13

    $default  reduce using rule 25 (S)

    TVAR  go to state 14
    DEC   go to state 15
    S     go to state 16


State 12

   18 TVAR: Int •

    $default  reduce using rule 18 (TVAR)


State 13

   19 TVAR: Bool •

    $default  reduce using rule 19 (TVAR)


State 14

   20 DEC: TVAR • Id

    Id  shift, and go to state 17


State 15

   21 D: D DEC • ';'

    ';'  shift, and go to state 18


State 16

    1 P: TRET Main '(' ')' '{' D S • '}'
    2 E: • E '+' E
    3  | • E '*' E
    4  | • '(' E ')'
    5  | • Nro
    6  | • Not E
    7  | • E And E
    8  | • E Or E
    9  | • True
   10  | • False
   11  | • Id
   12  | • Id '=' E
   13 RET: • Return E
   14    | • Return
   23 S: S • E ';'
   24  | S • RET ';'

    Return  shift, and go to state 19
    Not     shift, and go to state 20
    True    shift, and go to state 21
    False   shift, and go to state 22
    Id      shift, and go to state 23
    Nro     shift, and go to state 24
    '('     shift, and go to state 25
    '}'     shift, and go to state 26

    E    go to state 27
    RET  go to state 28


State 17

   20 DEC: TVAR Id •

    $default  reduce using rule 20 (DEC)


State 18

   21 D: D DEC ';' •

    $default  reduce using rule 21 (D)


State 19

    2 E: • E '+' E
    3  | • E '*' E
    4  | • '(' E ')'
    5  | • Nro
    6  | • Not E
    7  | • E And E
    8  | • E Or E
    9  | • True
   10  | • False
   11  | • Id
   12  | • Id '=' E
   13 RET: Return • E
   14    | Return •  [';']

    Not    shift, and go to state 20
    True   shift, and go to state 21
    False  shift, and go to state 22
    Id     shift, and go to state 23
    Nro    shift, and go to state 24
    '('    shift, and go to state 25

    $default  reduce using rule 14 (RET)

    E  go to state 29


State 20

    2 E: • E '+' E
    3  | • E '*' E
    4  | • '(' E ')'
    5  | • Nro
    6  | • Not E
    6  | Not • E
    7  | • E And E
    8  | • E Or E
    9  | • True
   10  | • False
   11  | • Id
   12  | • Id '=' E

    Not    shift, and go to state 20
    True   shift, and go to state 21
    False  shift, and go to state 22
    Id     shift, and go to state 23
    Nro    shift, and go to state 24
    '('    shift, and go to state 25

    E  go to state 30


State 21

    9 E: True •

    $default  reduce using rule 9 (E)


State 22

   10 E: False •

    $default  reduce using rule 10 (E)


State 23

   11 E: Id •  ['+', '*', And, Or, ')', ';']
   12  | Id • '=' E

    '='  shift, and go to state 31

    $default  reduce using rule 11 (E)


State 24

    5 E: Nro •

    $default  reduce using rule 5 (E)


State 25

    2 E: • E '+' E
    3  | • E '*' E
    4  | • '(' E ')'
    4  | '(' • E ')'
    5  | • Nro
    6  | • Not E
    7  | • E And E
    8  | • E Or E
    9  | • True
   10  | • False
   11  | • Id
   12  | • Id '=' E

    Not    shift, and go to state 20
    True   shift, and go to state 21
    False  shift, and go to state 22
    Id     shift, and go to state 23
    Nro    shift, and go to state 24
    '('    shift, and go to state 25

    E  go to state 32


State 26

    1 P: TRET Main '(' ')' '{' D S '}' •

    $default  reduce using rule 1 (P)


State 27

    2 E: E • '+' E
    3  | E • '*' E
    7  | E • And E
    8  | E • Or E
   23 S: S E • ';'

    '+'  shift, and go to state 33
    '*'  shift, and go to state 34
    And  shift, and go to state 35
    Or   shift, and go to state 36
    ';'  shift, and go to state 37


State 28

   24 S: S RET • ';'

    ';'  shift, and go to state 38


State 29

    2 E: E • '+' E
    3  | E • '*' E
    7  | E • And E
    8  | E • Or E
   13 RET: Return E •  [';']

    '+'  shift, and go to state 33
    '*'  shift, and go to state 34
    And  shift, and go to state 35
    Or   shift, and go to state 36

    $default  reduce using rule 13 (RET)


State 30

    2 E: E • '+' E
    3  | E • '*' E
    6  | Not E •  ['+', '*', And, Or, ')', ';']
    7  | E • And E
    8  | E • Or E

    $default  reduce using rule 6 (E)

    Conflict between rule 6 and token '+' resolved as reduce ('+' < Not).
    Conflict between rule 6 and token '*' resolved as reduce ('*' < Not).
    Conflict between rule 6 and token And resolved as reduce (And < Not).
    Conflict between rule 6 and token Or resolved as reduce (Or < Not).


State 31

    2 E: • E '+' E
    3  | • E '*' E
    4  | • '(' E ')'
    5  | • Nro
    6  | • Not E
    7  | • E And E
    8  | • E Or E
    9  | • True
   10  | • False
   11  | • Id
   12  | • Id '=' E
   12  | Id '=' • E

    Not    shift, and go to state 20
    True   shift, and go to state 21
    False  shift, and go to state 22
    Id     shift, and go to state 23
    Nro    shift, and go to state 24
    '('    shift, and go to state 25

    E  go to state 39


State 32

    2 E: E • '+' E
    3  | E • '*' E
    4  | '(' E • ')'
    7  | E • And E
    8  | E • Or E

    '+'  shift, and go to state 33
    '*'  shift, and go to state 34
    And  shift, and go to state 35
    Or   shift, and go to state 36
    ')'  shift, and go to state 40


State 33

    2 E: • E '+' E
    2  | E '+' • E
    3  | • E '*' E
    4  | • '(' E ')'
    5  | • Nro
    6  | • Not E
    7  | • E And E
    8  | • E Or E
    9  | • True
   10  | • False
   11  | • Id
   12  | • Id '=' E

    Not    shift, and go to state 20
    True   shift, and go to state 21
    False  shift, and go to state 22
    Id     shift, and go to state 23
    Nro    shift, and go to state 24
    '('    shift, and go to state 25

    E  go to state 41


State 34

    2 E: • E '+' E
    3  | • E '*' E
    3  | E '*' • E
    4  | • '(' E ')'
    5  | • Nro
    6  | • Not E
    7  | • E And E
    8  | • E Or E
    9  | • True
   10  | • False
   11  | • Id
   12  | • Id '=' E

    Not    shift, and go to state 20
    True   shift, and go to state 21
    False  shift, and go to state 22
    Id     shift, and go to state 23
    Nro    shift, and go to state 24
    '('    shift, and go to state 25

    E  go to state 42


State 35

    2 E: • E '+' E
    3  | • E '*' E
    4  | • '(' E ')'
    5  | • Nro
    6  | • Not E
    7  | • E And E
    7  | E And • E
    8  | • E Or E
    9  | • True
   10  | • False
   11  | • Id
   12  | • Id '=' E

    Not    shift, and go to state 20
    True   shift, and go to state 21
    False  shift, and go to state 22
    Id     shift, and go to state 23
    Nro    shift, and go to state 24
    '('    shift, and go to state 25

    E  go to state 43


State 36

    2 E: • E '+' E
    3  | • E '*' E
    4  | • '(' E ')'
    5  | • Nro
    6  | • Not E
    7  | • E And E
    8  | • E Or E
    8  | E Or • E
    9  | • True
   10  | • False
   11  | • Id
   12  | • Id '=' E

    Not    shift, and go to state 20
    True   shift, and go to state 21
    False  shift, and go to state 22
    Id     shift, and go to state 23
    Nro    shift, and go to state 24
    '('    shift, and go to state 25

    E  go to state 44


State 37

   23 S: S E ';' •

    $default  reduce using rule 23 (S)


State 38

   24 S: S RET ';' •

    $default  reduce using rule 24 (S)


State 39

    2 E: E • '+' E
    3  | E • '*' E
    7  | E • And E
    8  | E • Or E
   12  | Id '=' E •  [')', ';']

    '+'  shift, and go to state 33
    '*'  shift, and go to state 34
    And  shift, and go to state 35
    Or   shift, and go to state 36

    $default  reduce using rule 12 (E)

    Conflict between rule 12 and token '+' resolved as shift ('=' < '+').
    Conflict between rule 12 and token '*' resolved as shift ('=' < '*').
    Conflict between rule 12 and token And resolved as shift ('=' < And).
    Conflict between rule 12 and token Or resolved as shift ('=' < Or).


State 40

    4 E: '(' E ')' •

    $default  reduce using rule 4 (E)


State 41

    2 E: E • '+' E
    2  | E '+' E •  ['+', And, Or, ')', ';']
    3  | E • '*' E
    7  | E • And E
    8  | E • Or E

    '*'  shift, and go to state 34

    $default  reduce using rule 2 (E)

    Conflict between rule 2 and token '+' resolved as reduce (%left '+').
    Conflict between rule 2 and token '*' resolved as shift ('+' < '*').
    Conflict between rule 2 and token And resolved as reduce (And < '+').
    Conflict between rule 2 and token Or resolved as reduce (Or < '+').


State 42

    2 E: E • '+' E
    3  | E • '*' E
    3  | E '*' E •  ['+', '*', And, Or, ')', ';']
    7  | E • And E
    8  | E • Or E

    $default  reduce using rule 3 (E)

    Conflict between rule 3 and token '+' resolved as reduce ('+' < '*').
    Conflict between rule 3 and token '*' resolved as reduce (%left '*').
    Conflict between rule 3 and token And resolved as reduce (And < '*').
    Conflict between rule 3 and token Or resolved as reduce (Or < '*').


State 43

    2 E: E • '+' E
    3  | E • '*' E
    7  | E • And E
    7  | E And E •  [And, Or, ')', ';']
    8  | E • Or E

    '+'  shift, and go to state 33
    '*'  shift, and go to state 34

    $default  reduce using rule 7 (E)

    Conflict between rule 7 and token '+' resolved as shift (And < '+').
    Conflict between rule 7 and token '*' resolved as shift (And < '*').
    Conflict between rule 7 and token And resolved as reduce (%left And).
    Conflict between rule 7 and token Or resolved as reduce (Or < And).


State 44

    2 E: E • '+' E
    3  | E • '*' E
    7  | E • And E
    8  | E • Or E
    8  | E Or E •  [Or, ')', ';']

    '+'  shift, and go to state 33
    '*'  shift, and go to state 34
    And  shift, and go to state 35

    $default  reduce using rule 8 (E)

    Conflict between rule 8 and token '+' resolved as shift (Or < '+').
    Conflict between rule 8 and token '*' resolved as shift (Or < '*').
    Conflict between rule 8 and token And resolved as shift (Or < And).
    Conflict between rule 8 and token Or resolved as reduce (%left Or).
